[package]
name = "merino"
version = "0.1.3"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
# rayon = "1.0"
pretty_env_logger = "0.3.0"
log = "0.4.6"
clap = { version = "3.0.7", features = ["derive"] }
snafu = "0.4.1"
csv = "1"
serde = "1"
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
