[package]
name = "merino"
version = "0.1.3"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
csv = "1.1.6"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = "1.0.133"
serde_derive = "1.0.133"
snafu = "0.7.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
