[package]
name = "merino"
version = "0.1.3"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
csv = "1.2.1"
log = "0.4.18"
pretty_env_logger = "0.5.0"
serde = "1.0.163"
serde_derive = "1.0.163"
snafu = "0.7.4"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
